--- a/one_web company/index.html
+++ b/one_web company/index.html
@@ -7,7 +7,7 @@
     <title>One web Resume</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="shortcut icon" href="./img/one web.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/oneWeb.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <h1>Анкета</h1>
             <ul>
                 <li>
-                    <p>Полное ФИО</p>
+                    <p>Полное ФИО</p> Abdulhakimov Hojiakbar
                 </li>
             </ul>
 
