--- a/one_web company/index.html
+++ b/one_web company/index.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One web Resume</title>
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="shortcut icon" href="./img/oneWeb.svg" type="image/x-icon">
+    <title>oneWeb</title>
 </head>
-
 <body>
-
-    <div class="container">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-
-        <div class="wrapper">
-            <span>
-                <img src="./img/logo.png" alt="oneweb">
-                <p>Разработка сайтов</p>
-            </span>
-            <h1>Анкета</h1>
-            <ul>
-                <li>
-                    <p>Полное ФИО</p> Abdulhakimov Hojiakbar
-                </li>
-            </ul>
-
-        </div>
-
+    
+    <div id="hello">
+        <h1 onclick="funcjson()">Salam dunyo</h1>
     </div>
+
+    <table id="employee"></table>
 
     <script src="script.js"></script>
 </body>
-
 </html>
